Change program to remove static arguments - done/ Status need to improve something else!